apps/guestbook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app.kubernetes.io/name: guestbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: guestbook
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guestbook
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.27-alpine
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          volumeMounts:
            - name: conf
              mountPath: /etc/nginx/conf.d
            - name: html
              mountPath: /usr/share/nginx/html

          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
      volumes:
        - name: conf
          configMap:
            name: guestbook-conf
        - name: html
          configMap:
            name: guestbook-html
