apps/guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  ingressClassName: nginx
  tls:
    - secretName: guestbook-tls
      hosts:
        - guestbook.192.168.105.200.nip.io
  rules:
    - host: guestbook.192.168.105.200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook
                port:
                  name: http
